--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ hr{
 
 .navbar .nav-brand{
     font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .navbar .link{
@@ -96,6 +97,10 @@ hr{
     color:var(--primary-color);
     display: block;
     font-size: 1.6rem;
+}
+
+.hero-other-page{
+    color:var(--primary-color);
 }
 
 .section{
